# ura-ds

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  documentation.yml  feature.yml
.github/workflows/: ci.yml  docs_gate.yml  sentry_release.yml
docs/standards/: README.md
docs/templates/project/: DATA_SOURCES.md  MODEL_CARD.md  README.md  RUNBOOK.md
projects/wht-exemption/: DATA_SOURCES.md  MODEL_CARD.md  README copy.md  README.md  RUNBOOK.md  metadata.json
projects/wht-exemption/artifacts/: wht_model_bundle.pkl
projects/wht-exemption/configs/: feature_spec.yaml  model.yaml  rules.yaml
projects/wht-exemption/data/: hive_connection.py  test_connection.py
projects/wht-exemption/data/synthetic/: wht_applications_synthetic.csv  wht_training_dataset_synthetic.csv
projects/wht-exemption/docs/: design.md  evaluation.md  labeling.md
projects/wht-exemption/src/ura_ds_portfolio.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
projects/wht-exemption/src/wht_exemption/decision/: decision_record.py  replay.py
projects/wht-exemption/src/wht_exemption/features/: validate_features.py
projects/wht-exemption/src/wht_exemption/model/: explain.py  io.py  predict.py  train.py
projects/wht-exemption/src/wht_exemption/rules/: engine.py
projects/wht-exemption/src/wht_exemption/schemas/: decision_record.schema.json
projects/wht-exemption/tests/: test_decision_record_schema.py  test_replay_determinism.py
(+2 files in other folders)
